--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="overflow-x-hidden"
+>
   <head>
     <meta charset="UTF-8" />
     <link
